// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with entity impact level and alarm state 1`] = `
<span
  class="v-tooltip v-tooltip--right"
>
  <transition-stub
    name="slide-x-transition"
  />
  <span>
    <div
      class="color-indicator white--text"
      style="background-color: rgb(205, 220, 57);"
    >
      2
    </div>
  </span>
</span>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with entity impact level and alarm state 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    2 of 30
  </span>
</div>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with entity impact level and impact state 1`] = `
<span
  class="v-tooltip v-tooltip--right"
>
  <transition-stub
    name="slide-x-transition"
  />
  <span>
    <div
      class="color-indicator white--text"
      style="background-color: rgb(245, 124, 0);"
    >
      12
    </div>
  </span>
</span>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with entity impact level and impact state 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    12 of 30
  </span>
</div>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with state type and default slot 1`] = `
<span
  class="v-tooltip v-tooltip--right"
>
  <transition-stub
    name="slide-x-transition"
  />
  <span>
    <div
      class="color-indicator white--text"
      style="background-color: rgb(255, 153, 0);"
    >
      <div
        class="default-slot"
      />
    </div>
  </span>
</span>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with state type and default slot 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Major
  </span>
</div>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with unresolved type 1`] = `
<span
  class="v-tooltip v-tooltip--right"
>
  <transition-stub
    name="slide-x-transition"
  />
  <span>
    <div
      class="color-indicator white--text"
      style="background-color: rgb(0, 166, 90);"
    >
      0
    </div>
  </span>
</span>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` with unresolved type 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Ok
  </span>
</div>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` without type but with default slot 1`] = `
<span
  class="v-tooltip v-tooltip--right"
>
  <transition-stub
    name="slide-x-transition"
  />
  <span>
    <div
      class="color-indicator white--text"
      style="background-color: rgb(245, 105, 84);"
    >
      <div
        class="default-slot"
      />
    </div>
  </span>
</span>
`;

exports[`color-indicator-wrapper Renders \`color-indicator-wrapper\` without type but with default slot 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <span>
    Critical
  </span>
</div>
`;
